# baseballstats

./: .gitattributes  .gitignore  FILEERRORS  HOWTO  README.md  TODO  basesLoadedNoRunsNoOuts.xlsx  generatetablerows.py  get_cumulative_stats  getcumulativestats.py  getstats.py  graphgame.cgi  graphgame.html  graphgame.js  index.html  info  parseretrosheet.py  printProfileData.py  probs.txt  probswithballsstrikes.txt  processallstatsruns.py  processballsstrikesstats.py  processballsstrikesstatsruns.py  processcumulativeballsstrikesrunsperinningstats.py  processcumulativeballsstrikesstats.py  processcumulativerunsperinningstats.py  processcumulativestats.py  processleveragefromcumulative.py  processstats.py  processstatsruns.py  runsperinning.html  runsperinning.js  runsperinning.xml  runsperinningballsstrikes.xml  runsperinningballsstrikesstats  runsperinningstats  runsperinningstats.backup  sample  stats  stats.html  (+7 more)
interestinggames/: NLCSgame4  NLCSgame5  NLCSgame6  NLDSgame4  WSgame1  WSgame2  WSgame3  WSgame4
public/: app.3895dba2.css  app.694a40d5.js  app.6cd6ce6d.js  app.9ec3109b.css  app.cc6307ca.js  getcumulativestats.cgi  getstats.py  getstats.txt  graphgame.cgi  graphgame.html  graphgame.js  graphgame.txt  interestinggames  interestingimages  jquery-1.11.3.min.js  jquery-3.3.1.min.js  jqueryui  manifest.8d98e1cf.js  manifest.96da8845.js  manifest.c77f1bb3.js  parseretrosheet.txt  picker  probs.txt  processcumulativestats.py  processstats.txt  prototype-1.4.0.js  reactbuild  runsperinning.html  runsperinning.js  runsperinning.txt  runsperinning.xml  runsperinningballsstrikes.xml  static  stats.html  stats.jquery.html  stats.php  stats.txt  statsreact.dev  statsruns  statsyears  (+4 more)
retrosheet_stats/: Cargo.toml
retrosheet_stats/src/: main.rs  reports.rs
statsreact/: HOWTO  nwb.config.js  package-lock.json  package.json  replaceSsiTags.js  tsconfig.json
statsreact.new/: package.json
statsreact.old/: README.md  package.json
statsruns/: runsperinningballsstrikescumulative1903.xml  runsperinningballsstrikescumulative1905.xml  runsperinningballsstrikescumulative1906.xml  runsperinningballsstrikescumulative1907.xml  runsperinningballsstrikescumulative1908.xml  runsperinningballsstrikescumulative1909.xml  (+235 more)
statsyears/: leverage  (+955 more)
(+86 files in other folders)
