[package]
name = "retrosheet_stats"
version = "0.1.0"
authors = ["gregstoll <greg@gregstoll.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.36"
argh = "0.1"
glob = "0.3"
encoding = "0.2"
smallvec = "1.6.0"

[dependencies.regex]
version = "1"
default-features = false  # Turn off unicode support
features = ["std", "perf", "unicode-perl"]