[package]
name = "retrosheet_stats"
version = "0.1.0"
authors = ["gregstoll <greg@gregstoll.com>"]
edition = "2018"
default-run = "retrosheet_stats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.36"
argh = "0.1"
glob = "0.3"
encoding = "0.2"
smallvec = "1.6.1"
smol_str = "0.1.17"
rayon = "1.5.0"

cgi = "0.6"
json = "0.12"
url = "2.1"

[dependencies.regex]
version = "1"
default-features = false  # Turn off unicode support
features = ["std", "perf", "unicode-perl"]

[features]
# This feature checks to ensure we don't process the same game twice.
# It has a bit of performance impact (~30% slower) so it is turned off by default.
check_duplicate_game_ids = []

[profile.release]
opt-level = 2 #3 is max
#debug = true
# https://deterministic.space/high-performance-rust.html
#lto = "fat"
#codegen-units = 1
